product_docs/docs/bart/2.5/bart_user/03_using_bart/03_basic_bart_subcommand_usage/08_restore.mdx
---
title: "RESTORE"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/edb-backup-and-recovery-tool/user-guides/backup-recovery-guide/2.5.1/restore.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/user-guides/backup-recovery-guide/2.5.2/restore.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/user-guides/backup-recovery-guide/2.5.4/restore.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/user-guides/backup-recovery-guide/2.5.3/restore.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/user-guides/backup-recovery-guide/2.5.5/restore.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/user-guides/backup-recovery-guide/2.5.7/restore.html"
---

<div id="restore" class="registered_link"></div>

The `RESTORE` subcommand restores a backup and its archived WAL files for the designated database server to the specified directory location. If the appropriate `RESTORE` options are specified, all recovery settings will be saved in the `postgresql.auto.conf` file.

**Syntax:**

```text
bart RESTORE –s <server_name> -p <restore_path>
  [ –i { <backup_id> | <backup_name> } ]
  [ -r <remote_user@remote_host_address> ]
  [ -w <number_of_workers> ]
  [ -t <timeline_id> ]
  [ { -x <target_xid> | -g <target_timestamp> } ]
  [ -c ]
```

For information about using a continuous archive backup for recovery, see the [PostgreSQL Core Documentation](https://www.postgresql.org/docs/13/static/continuous-archiving.html). This reference material provides detailed information about the underlying point-in-time recovery process and the meaning and usage of the restore options that are generated into the `postgresql.auto.conf` file by BART.

**Please note**:

-   For special requirements when restoring an incremental backup to a remote database server, see [Restoring an Incremental Backup on a Remote Host](../../02_overview/01_block-level_incremental_backup/05_restoring_an_incremental_backup/#restoring_an_incremental_backup_on_a_remote_host).
-   Check to ensure that the host where the backup is to be restored contains enough disk space for the backup and its archived WAL files. The `RESTORE` subcommand may result in an error while copying files if there is not enough disk space available.
-   See [Performing a Restore Operation](../01_bart_management_overview/01_performing_a_restore_operation/#performing_a_restore_operation) to view steps on how to perform a restore operation and see [Point-In-Time Recovery Operation](../01_bart_management_overview/02_point_in_time_recovery_operation/#point_in_time_recovery_operation) to view steps on how to perform a point-in-time recovery operation.
-   If the backup is restored to a different database cluster directory than where the original database cluster resided, certain operations dependent upon the database cluster location may fail. This happens if their supporting service scripts are not updated to reflect the new directory location of restored backup. For information about the usage and modification of service scripts, see the *EDB Advanced Server Installation Guide* available at the [EDB website](/epas/latest/).

The following table describes the command options:

| Options                                                                                    | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| ------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `-s <server_name>`<br />`--server <server_name>`                                           | `<server_name>` is the name of the database server to be restored.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| `-p <restore_path>`<br />`--restore-path <restore_path>`                                   | `<restore_path>` is the directory path where the backup of the database server is to be restored. The directory must be empty and have the proper ownership and privileges assigned to it.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| `-i {<backup_id> \| <backup_name>}`<br /><br />`--backupid {<backup_id> \| <backup_name>}` | `<backup_id>` is the backup identifier of the backup to be used for the restoration and `<backup_name>` is the user-defined alphanumeric name for the backup.<br />If the option is omitted, the default is to use the latest backup.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| `-r or --remote-host <remote_user @remote_host_address>`                                   | `<remote_user>` is the user account on the remote database server host that accepts a passwordless SSH/SCP login connection and is the owner of the directory where the backup is to be restored and `<remote_host_address>` is the IP address of the remote host to which the backup is to be restored. This option must be specified if the `<remote_host>` parameter for this database server is not set in the BART configuration file.<br />If the BART user account is not the same as the operating system account owning the `<restore_path>` directory given with the `-p` option, use the `<remote_host>` BART configuration parameter or the `RESTORE` subcommand `-r` option to specify the `<restore_path>` directory owner even when restoring to a directory on the same host as the BART host.<br />See the *EDB Backup and Recovery Installation and Upgrade Guide* available at the [EDB website](/bart/latest/bart_inst/) for information about the `<remote_host>` parameter. |
| `-w <number_of_workers>`<br />`--workers <number_of_workers>`                              | `<number_of_workers>` is the specification of the number of worker processes to run in parallel to stream the modified blocks of an incremental backup to the restore location.<br />For example, if 4 worker processes are specified, 4 receiver processes on the restore host and 4 streamer processes on the BART host are used. The output of each streamer process is connected to the input of a receiver process. When the receiver gets to the point where it needs a modified block file, it obtains those modified blocks from its input. With this method, the modified block files are never written to the restore host disk. If the `-w` option is omitted, the default is `1` \| worker process.                                                                                                                                                                                                                                                                                   |
| `-t <timeline_id>`<br />`--target-tli <timeline_id>`                                       | `<timeline_id>` is the integer identifier of the timeline to be used for replaying the archived WAL files for point-in-time recovery.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| `-x <target_xid>`<br />`--target-xid <target_xid>`                                         | `<target_xid>` is the integer identifier of the transaction ID that determines the transaction up to and including, which point-in-time recovery encompasses. Include either the `-x <target_xid>` or the `--target-xid <target_xid>` option if point-in-time recovery is desired.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| `-g <target_timestamp>`<br /><br />`--target-timestamp <target_timestamp>`                 | `<target_timestamp>` is the timestamp that determines the point in time up to and including, which point-in-time recovery encompasses. Include either the `--target-timestamp <target_timestamp>` or the `-g <target_timestamp>` option if point-in-time recovery is desired.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| `-c`<br />`--copy-wals`                                                                    | Specify this option to copy archived WAL files from the BART backup catalog to `<restore_path>/archived_wals` directory.<br />If recovery settings are saved in the `postgresql.auto.conf` file for point-in-time recovery, the `restore_command` retrieves the WAL files from `<restore_path>/archived_wals` for the database server archive recovery.<br />If the `-c` option is omitted and the `copy_wals_during_restore` parameter in the BART configuration file is not enabled in a manner applicable to this database server, the `restore_command` in the `postgresql.auto.conf` file is generated by default to retrieve the archived WAL files directly from the BART backup catalog. See the *EDB Backup and Recovery Installation and Upgrade Guide* available at the [EDB website](/bart/latest/bart_inst/) for information about the `copy_wals_during_restore` parameter.                                                                                                         |